# eu5-strategy-agent

./: .env.example  .gitignore  BENCHMARKS.md  CLAUDE.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  TODO.md  analyze_bottlenecks.py  benchmark.py  knowledge  pyproject.toml  requirements.txt  run_agent.py  verify_fix.py
docs/: CLEANUP_SUMMARY.md  COMPLEX_ADVICE_PLAN.md  CONFIGURATION.md  EU5_README.md  INTEGRATION_TESTS.md  INTEGRATION_TESTS_EXAMPLE.md
docs/evaluation/: SPRINT1_GOLDEN_QUERIES.md  SPRINT1_RUBRIC.md
docs/performance/: PERFORMANCE_ANALYSIS.md  PERFORMANCE_INDEX.md  PERFORMANCE_QUICKREF.md  README.md  README_PERFORMANCE.md
eu5_agent/: __init__.py  agent.py  cache.py  cli.py  config.py  knowledge.py  prompts.py  search.py
eu5_agent/knowledge/mechanics/: advances_mechanics.md  diplomacy_mechanics.md  economy_mechanics.md  geopolitics_mechanics.md  government_mechanics.md  military_mechanics.md  production_mechanics.md  society_mechanics.md  warfare_mechanics.md
eu5_agent/knowledge/nations/: nation_england.md
eu5_agent/knowledge/resources/: eu5_resources.md
eu5_agent/knowledge/strategy/: beginner_route.md  common_mistakes.md
knowledge/mechanics/: advances_mechanics.md  economy_mechanics.md  military_mechanics.md
knowledge/nations/: nation_england.md
knowledge/resources/: eu5_resources.md
knowledge/strategy/: beginner_route.md
tests/: conftest.py  test_agent.py  test_agent_unit.py  test_cache_unit.py  test_cli_unit.py  test_config_unit.py  test_knowledge_unit.py  test_openai_api.py  test_openai_integration.py  test_search_unit.py
